# rsrserver

./: .gitmodules  Cargo.toml
echoserver/: Cargo.toml
echoserver/certs/: cert.key.pem  cert.pem  root-ca.key.pem  root-ca.pem
echoserver/src/: error.rs  main.rs
echoserver/src/archive/irc/command/: cap.rs  make.sh  mod.rs
echoserver/src/irc/: capability.rs  context.rs  mod.rs  server.rs  session.rs
echoserver/src/irc/command/: admin.rs  authenticate.rs  away.rs  cap.rs  connect.rs  info.rs  invite.rs  links.rs  list.rs  lusers.rs  mod.rs  notice.rs  oper.rs  part.rs  ping.rs  pong.rs  privmsg.rs  quit.rs  rehash.rs  squit.rs  stats.rs  userhost.rs  who.rs  whowas.rs
echoserver/src/storage/: mod.rs
rsrserver/: Cargo.toml
rsrserver/src/: error.rs  ext.rs  main.rs
rsrserver/src/archive/irc/: mod.rs
rsrserver/src/irc/: context.rs  server.rs
rsrserver/src/irc/command/: admin.rs  authenticate.rs  away.rs  cap.rs  connect.rs  error.rs  help.rs  info.rs  invite.rs  join.rs  kick.rs  kill.rs  links.rs  list.rs  lusers.rs  mod.rs  mode.rs  motd.rs  names.rs  nick.rs  notice.rs  oper.rs  part.rs  pass.rs  ping.rs  pong.rs  privmsg.rs  quit.rs  rehash.rs  restart.rs  squit.rs  stats.rs  time.rs  topic.rs  user.rs  userhost.rs  version.rs  wallops.rs  who.rs  whois.rs  (+1 more)
rsrserver/src/irc/session/: machine.rs  mod.rs  state.rs
rsrserver/src/storage/: irc_model.rs  mod.rs
src/: main.rs  tlsserver.rs
